# iqs_cpii

./: .env.example  .gitignore  .iqs_heartbeat  README.md  environment.yml  pyproject.toml
data/calibration/: calibration_latest.json
deploy/systemd/: iqs-coldpath.service  iqs-coldpath.timer
docs/: Makefile  api.rst  broker.rst  calibrator.rst  conf.py  execution.rst  fundamental.rst  index.rst  manager.rst  news.rst  nlp_veto.rst  technical.rst
iqs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/iqs/: __init__.py  broker.py  calibrator.py  coldpath.py  events.py  execution.py  fundamental.py  hotpath.py  instruments.py  main.py  manager.py  market_data_feed.py  math_engine.py  news.py  nlp_veto.py  resilience.py  technical.py  watchdog.py
src/iqs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/iqs/app/: main.py  manager.py
src/iqs/coldpath/: calibrator.py  runner.py
src/iqs/data/: broker.py
src/iqs/execution/: execution.py
src/iqs/ops/: watchdog.py
src/iqs/services/: news.py
src/iqs/strategy/: hotpath.py
tests/: conftest.py  test_event_driven_technical.py  test_hotpath_engine.py  test_market_data_feed_volume_bars.py  test_technical_me_simple_v1.py
ui/: app.py  demo_runner.py  run_demo.py  ui_logs.txt  ui_state.json
