[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iqs"
version = "0.1.0"
description = "Institutional Quantitative System - MVP para Computer Programming 2"
authors = [
    {name = "Tu Nombre", email = "tu.email@student.ie.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "numba",
    "ib_insync",
    "pandas-ta",
    "python-dotenv",
    "groq",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "sphinx",
] 
demo = [
    "streamlit",
]

[project.scripts]
iqs = "iqs.app.main:cli"
iqs-watchdog = "iqs.ops.watchdog:main"
iqs-coldpath = "iqs.cli.coldpath:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]